--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,15 @@ Chapter03/ch3_part2/.settings/
 Chapter03/ch3_part2/bin/
 Chapter03/ch3_part2/upload-dir/
 
+# Chapter 04
+Chapter04/ch4_part1/.classpath
+Chapter04/ch4_part1/.project
+Chapter04/ch4_part1/.settings/
+Chapter04/ch4_part1/bin/
+Chapter04/ch4_part1/test-results/
+Chapter04/ch4_part1/upload-dir/
+Chapter04/ch4_part2/.classpath
+Chapter04/ch4_part2/.project
+Chapter04/ch4_part2/.settings/
+Chapter04/ch4_part2/bin/
+
