--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,16 @@ Chapter04/ch4_part2/.project
 Chapter04/ch4_part2/.settings/
 Chapter04/ch4_part2/bin/
 
+# Chapter 05
+Chapter05/ch5_part1/.classpath
+Chapter05/ch5_part1/.project
+Chapter05/ch5_part1/.settings/
+Chapter05/ch5_part1/bin/
+Chapter05/ch5_part1/upload-dir/
+Chapter05/ch5_part2/.classpath
+Chapter05/ch5_part2/.project
+Chapter05/ch5_part2/.settings/
+Chapter05/ch5_part2/bin/
+Chapter05/ch5_part2/build/
+Chapter05/ch5_part2/upload-dir/
+
