Chapter 06 initial changes.

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,16 @@ Chapter05/ch5_part2/bin/
 Chapter05/ch5_part2/build/
 Chapter05/ch5_part2/upload-dir/
 
+# Chapter 06
+Chapter06/ch6_part1/.classpath
+Chapter06/ch6_part1/.project
+Chapter06/ch6_part1/.settings/
+Chapter06/ch6_part1/bin/
+Chapter06/ch6_part2/.classpath
+Chapter06/ch6_part2/.project
+Chapter06/ch6_part2/.settings/
+Chapter06/ch6_part2/bin/
+Chapter06/ch6_part3/.classpath
+Chapter06/ch6_part3/.project
+Chapter06/ch6_part3/.settings/
+Chapter06/ch6_part3/bin/
